Make correction in 2 endpoints, and reformat All code for better structure.